help: fix input control alignment
Fixes: 079bf8af5a16 ("helpz: refine template for help pages")

--- a/_src/styles/help.scss
+++ b/_src/styles/help.scss
@@ -534,6 +534,9 @@
   & > .form-select {
     min-width: 10rem;
   }
+  & > .form-switch {
+    margin: 0;
+  }
   & > .form-switch > input.form-check-input {
     margin-left: 0;
   }
